--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,4 @@
 @import "bulma/bulma";
+@import "@fontawesome/fontawesome-free/css/fontawesome.min.css";
+@import "@fontawesome/fontawesome-free/css/solid.min.css";
+@import "bulma-quickview/dist/css/bulma-quickview";
