--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -29,6 +29,13 @@
                         Settings
                     <% end %>
                 </li>
+
+                <li>
+                    <%= link_to destroy_user_session_path, data: { method: :delete } do %>
+                        <i class="fas fa-sign-out-alt"></i>
+                        Sign Out
+                    <% end %>
+                </li>
             </ul>
         </div>
     </div>
