--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,13 @@
         }
     }
 }
+
+.button.fa-button {
+    position: fixed;
+    z-index: 999;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    bottom: 30px;
+    right: 30px;
+}
