--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "@fontawesome/fontawesome-free/css/fontawesome.min.css";
 @import "@fontawesome/fontawesome-free/css/solid.min.css";
 @import "bulma-quickview/dist/css/bulma-quickview";
+@import "./chats";
 
 .navbar-burger.burger.desktop-burger {
     display: block;
