--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-black-ter has-text-white-ter">
   <head>
     <title>One Messenger</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <meta name="viewport" content="width=device-widthm initial-scale=1">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="has-text-white-ter">
     <% if user_signed_in? %>
-      <nav clas="navbar has-background-primary has-text-white-ter">
+      <nav class="navbar has-background-grey-dark has-text-white-ter">
         <div class="container">
           <div class="navbar-brand">
             <div class="navbar-item has-text-white-ter">
-              <%= image_tag "logo-menu.png" %>
+              <% if content_for?(:brand) %>
+                <%= yield :brand %>
+              <% else %>
+                <%= image_tag "logo-menu.png" %>
+              <% end %>
             </div>
-            
-            <div class="navbar-burger burger has-text-white-ter" data-show="quickview" data-targert="left-sidebar">
+
+            <div class="navbar-item has-text-white-ter has-text-weigth-bold is-size-5">
+              <%= yield :title %>
+            </div>
+
+            <div class="navbar-burger burger has-text-white-ter" data-show="quickview" data-target="left-sidebar">
               <span></span>
               <span></span>
               <span></span>
             </div>
           </div>
 
-          <div class="navbar-burger burger has-text-white-ter desktop-burger is-hidden-touch" data-show="quickview" data-targert="left-sidebar">
+          <div class="navbar-burger burger has-text-white-ter desktop-burger is-hidden-touch" data-show="quickview" data-target="left-sidebar">
             <span></span>
             <span></span>
             <span></span>
@@ -35,24 +42,22 @@
         </div>
 
         <%= render "layouts/sidebar" %>
-
       </nav>
     <% end %>
-    
+
     <section class="section">
       <div class="container">
         <% if alert %>
           <div class="notification is-danger">
             <%= alert %>
           </div>
-          <% elsif notice %>
-            <div class="notification is-success">
-              <%= notice %>
-            </div>
-          <% end %>
+        <% elsif notice %>
+          <div class="notification is-success">
+            <%= notice %>
+          </div>
+        <% end%>
         <%= yield %>
       </div>
     </section>
-
   </body>
 </html>
