Adding view create message and partial _message and applying a style to messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "@fontawesome/fontawesome-free/css/solid.min.css";
 @import "bulma-quickview/dist/css/bulma-quickview";
 @import "./chats";
+@import "./messages"
 
 .navbar-burger.burger.desktop-burger {
     display: block;
