Adjustments in controller and Contact views

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -17,7 +17,7 @@
                 </div>
             <% end %>
             
-            <%= f.submit "Add Contact", class: "button -is-fullwidth is-success is-outlined" %>
+        <%= f.submit "Add Contact", class: "button is-fullwidth is-success is-outlined" %>
         <% end %>
     </div>
 </div>
