--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -28,4 +28,5 @@
 
 <%= link_to new_contact_path, class: "button is-success fab-button" do %>
   <i class="fas fa-plus has-text-write-text"></i>
+  Add Contact
 <% end %>
